@@ -1,1 +1,39 @@
+<<<<<<< HEAD
+# FX Mini Studio - Week 2 Lab Submission
+
+## Overview
+FX Mini Studio is a JavaFX application developed for Lab 1, showcasing various UI components and features. It includes four tabs: **Layout Playground**, **Graphics & Binding**, **Images & Fonts**, and **Clock Widget**, with a MenuBar and theme support.
+
+## Features
+- **Layout Playground:** Demonstrates `BorderPane`, `GridPane`, and `FlowPane` with interactive forms and lists.
+- **Graphics & Binding:** Features an animatable `Ellipse` with sliders for radius, rotation, and color.
+- **Images & Fonts:** Displays an image with a width slider and showcases multiple font styles.
+- **Clock Widget:** A reusable analog clock with start/stop controls and theme switching.
+- **Bonus:** MenuBar with About dialog and dark/light theme toggle.
+
+## Requirements
+- JavaFX 24.0.2
+- JDK 24
+- IntelliJ IDEA 2025.2 (recommended)
+
+## Installation
+1. Clone the repository or copy the project files to `E:\Labs\AdvJava\Lab1_MiniFxStudio`.
+2. Ensure `src/main/resources` contains `styles.css` and `sample.jpeg`.
+3. Open in IntelliJ, set `src/main/java` as Sources and `src/main/resources` as Resources.
+4. Build and run `Main.java` with VM options:  
+    ' --module-path "path/to/javafx-sdk-24/lib" --add-modules javafx.controls,javafx.fxml '
+
+
+## Usage
+- Navigate tabs using the `TabPane`.
+- Use controls (sliders, buttons, ComboBoxes) to interact with each demo.
+- Switch themes via the **Theme** ComboBox in Layout Playground.
+
+
+## Author
+Sukhanpreet Singh, Student ID: S00392623
+
+
+=======
+>>>>>>> 65ab7e482b50710c9c0224d6a0930896d2e25fe6
 
